clusters/homelab/apps/info/info-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: podinfo
  namespace: info
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-cloudflare
    homelab.io/force-tls-reissue: "2025-05-05T22:00"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - info.int.rosair.me
      secretName: info-tls
  rules:
    - host: info.int.rosair.me
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: podinfo
                port:
                  number: 9898
